kubernetes-networks/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 100%
  template:
    metadata:
      labels:
        app: web
    spec: 
      containers:
      - name: web
        image: pa3mep/kubernetes-intro:1.2
        volumeMounts:
        - name: app
          mountPath: /app
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
        livenessProbe:
          tcpSocket: 
            port: 8000
        resources:
          requests:
            memory: "64M"
            cpu: "0.5"
          limits:
            memory: "128M"
            cpu: "1.0"
      volumes:
      - name: app
        emptyDir: {}
